:memo: Add site title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 theme: jekyll-theme-cayman
 show_downloads: false
+
+title: Sato Sailing Club
+description: Sailing for fun and learning
+
+
+#google_analytics: 
