--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,58 @@ show_projectpage: false
 
 
 #google_analytics: 
+
+
+# Build settings
+# ██████  ██    ██ ██ ██      ██████      ███████ ███████ ████████ ████████ ██ ███    ██  ██████  ███████
+# ██   ██ ██    ██ ██ ██      ██   ██     ██      ██         ██       ██    ██ ████   ██ ██       ██
+# ██████  ██    ██ ██ ██      ██   ██     ███████ █████      ██       ██    ██ ██ ██  ██ ██   ███ ███████
+# ██   ██ ██    ██ ██ ██      ██   ██          ██ ██         ██       ██    ██ ██  ██ ██ ██    ██      ██
+# ██████   ██████  ██ ███████ ██████      ███████ ███████    ██       ██    ██ ██   ████  ██████  ███████
+
+# Github-pages list of gems https://pages.github.com/versions/
+plugins:
+  - jekyll-feed             # SEO generate an Atom (RSS-like) feed of your Jekyll posts — https://github.com/jekyll/jekyll-feed
+  - jekyll-redirect-from    # SEO 301 redirects — https://github.com/jekyll/jekyll-redirect-from
+  - jekyll-seo-tag          # SEO add metadata tags for search & social networks — https://github.com/jekyll/jekyll-seo-tag
+  - jekyll-sitemap          # SEO Generate a sitemaps.org compliant sitemap — https://github.com/jekyll/jekyll-sitemap
+  - jekyll-gist             # Liquid Liquid tag for displaying GitHub Gists — https://github.com/jekyll/jekyll-gist/
+  - jekyll-mentions         # GFM @mention support for your Jekyll site — https://github.com/jekyll/jekyll-mentions
+  - jekyll-relative-links   # GFM convert relative links to markdown files to their rendered equivalents — https://github.com/benbalter/jekyll-relative-links/
+  - jemoji                  # GFM GitHub-flavored Emoji plugin for Jekyll — https://github.com/jekyll/jemoji
+  - jekyll-titles-from-headings # Generate page title from the first Markdown heading when none is specified — https://github.com/benbalter/jekyll-titles-from-headings
+
+#  - jekyll-paginate         # Jekyll Built-in Pagination Generator for Jekyll
+#  - jekyll-readme-index     # Jekyll Render a project's README as the site's index — https://github.com/benbalter/jekyll-readme-index/
+#  - jekyll-avatar           # Liquid  rendering GitHub avatars — https://github.com/benbalter/jekyll-avatar/
+#
+# Won't work on github pages, and will need to be added to Gemfile
+#  - jekyll-admin            # Provides a traditional CMS-style graphical interface to author and administer Jekyll — Docs: https://github.com/jekyll/jekyll-admin
+#  - jekyll-bootstrap-sass   # Docs: http://www.rubydoc.info/gems/jekyll-bootstrap-sass/0.1.0
+#  - bootstrap-sass          # Docs: http://www.rubydoc.info/gems/bootstrap-sass
+#
+# Jekyll-pages requires the following Gems by default.
+# Therefore, read the docs if you want to change default configurations.
+#      - jekyll-coffeescript              # https://github.com/jekyll/jekyll-coffeescript
+#      - jekyll-default-layout            # https://github.com/benbalter/jekyll-default-layout
+#      - jekyll-gist                      # https://github.com/jekyll/jekyll-gist
+#      - jekyll-github-metadata           # https://github.com/jekyll/github-metadata
+#      - jekyll-optional-front-matter     # https://github.com/benbalter/jekyll-optional-front-matter
+#      - jekyll-paginate                  # https://github.com/jekyll/jekyll-paginate
+#      - jekyll-readme-index              # https://github.com/benbalter/jekyll-readme-index
+#      - jekyll-relative-links            # https://github.com/benbalter/jekyll-relative-links
+#      - jekyll-titles-from-headings      # https://github.com/benbalter/jekyll-titles-from-headings
+
+liquid:
+  error_mode: strict #warn  #lax
+
+markdown: kramdown
+
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/
+:
+
+
