:sparkles: change default permalinks setting

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@ show_downloads: false
 show_projectpage: false
 
 google_analytics: UA-107316710-1
+permalink: /:categories/:title/
+
 
 # Github-pages list of gems https://pages.github.com/versions/
 gems:
